infrastructure/k8s/namespaces.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: deploy
---
apiVersion: v1
kind: Namespace
metadata:
  name: model-platform
---
apiVersion: v1
kind: Namespace
metadata:
  name: minio
