infrastructure/k8s/pgsql-deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pgsql
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgresdb
  namespace: pgsql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgresdb
  template:
    metadata:
      labels:
        app: postgresdb
    spec:
      containers:
      - name: postgresdb
        image: 'postgres:14'
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 5432
        volumeMounts:
          - mountPath: /var/lib/postgresql/data
            name: db-data
      volumes:
        - name: db-data
          persistentVolumeClaim:
            claimName: db-persistent-volume-claim
---
apiVersion: v1
kind: Service
metadata:
  name: modelplatform-pgsql
  namespace: pgsql
  labels:
    app: postgresdb
spec:
  type: NodePort
  ports:
  - port: 5432
  selector:
    app: postgresdb
